# go-grpc-xds-ts-server

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go  main_test.go  push_image.sh  run_docker.sh  test_grpcurl.sh
telemetry/: BUILD.bazel  telemetry.pb.go  telemetry.proto  telemetry_grpc.pb.go
