load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:prefix github.com/johanastborg/go-grpc-xds-ts-server
gazelle(name = "gazelle")

go_library(
    name = "go-grpc-xds-ts-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/johanastborg/go-grpc-xds-ts-server",
    visibility = ["//visibility:private"],
    deps = [
        "//telemetry",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_binary(
    name = "go-grpc-xds-ts-server",
    embed = [":go-grpc-xds-ts-server_lib"],
    visibility = ["//visibility:public"],
)

platform_transition_binary(
    name = "go-grpc-xds-ts-server_linux_arm64",
    binary = ":go-grpc-xds-ts-server",
    target_platform = "@rules_go//go/toolchain:linux_arm64",
)

platform_transition_binary(
    name = "go-grpc-xds-ts-server_linux_amd64",
    binary = ":go-grpc-xds-ts-server",
    target_platform = "@rules_go//go/toolchain:linux_amd64",
)

pkg_tar(
    name = "app_layer",
    srcs = [":go-grpc-xds-ts-server_linux_arm64"],
    package_dir = "/app",
)

pkg_tar(
    name = "app_layer_amd64",
    srcs = [":go-grpc-xds-ts-server_linux_amd64"],
    package_dir = "/app",
)

oci_image(
    name = "image",
    architecture = "arm64",  # Matches current environment
    entrypoint = ["/app/go-grpc-xds-ts-server"],
    env = {"PORT": "8080"},
    os = "linux",
    tars = [":app_layer"],
)

oci_image(
    name = "image_amd64",
    architecture = "amd64",
    entrypoint = ["/app/go-grpc-xds-ts-server"],
    env = {"PORT": "8080"},
    os = "linux",
    tars = [":app_layer_amd64"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["go-grpc-xds-ts-server:latest"],
)

oci_push(
    name = "push_amd64",
    image = ":image_amd64",
    remote_tags = [
        "latest",
        "latest-amd64",
    ],
    repository = "us-central1-docker.pkg.dev/gen-lang-client-0401240584/nisses-oci-stuff/go-grpc-xds-ts-server",
)

oci_push(
    name = "push_arm64",
    image = ":image",
    remote_tags = ["latest-arm64"],
    repository = "us-central1-docker.pkg.dev/gen-lang-client-0401240584/nisses-oci-stuff/go-grpc-xds-ts-server",
)

# Alias for convenience, defaults to amd64 for Cloud Run compatibility
alias(
    name = "push",
    actual = ":push_amd64",
)
