load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "telemetry",
    srcs = [
        "telemetry.pb.go",
        "telemetry_grpc.pb.go",
    ],
    importpath = "github.com/johanastborg/go-grpc-xds-ts-server/telemetry",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
